kubernetes/ingress/echo-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-echo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: http-echo
  labels:
    app: http-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Kubernetes Pod!"
            - "-listen=:8080"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: http-echo
spec:
  selector:
    app: http-echo
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: http-echo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
